--- a/MusicApp/app/src/main/res/values/strings.xml
+++ b/MusicApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Music App</string>
+    <string name="app_name">Music App</string>'
+
+    <string name="songs_library">Songs Library</string>
 </resources>
